--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Share:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="script.js" defer></script>
+    <script src="js/footer.js" defer></script>
 </head>
     <body>
         <section class="txt-section">
