styling af resten

--- a/the-end.html
+++ b/the-end.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/footer.js" defer></script>
 </head>
-    <body>
+    <body class="slutning">
         <section class="end-section">
                 <img src="img/safety-first.png" alt="" class="safety">
                 <h3>Safety first</h3>
