--- a/intro.html
+++ b/intro.html
@@ -14,10 +14,17 @@
     <body>
         <section class="txt-section">
                     
-                    <h1 id="hyppig">Den hyppigste hackerform i hverdagen</h1>
+                    <h1 id="hyppig">Den hyppigste hackerform i hverdagen er phishing</h1>
                     <img src="img/hacker-phishing(GIF).gif" alt="Hacker der der ude og 'phishe'" class="hacker-phishing">
-                    <p>Phishing er en form for cyberangreb, hvor angriberen forsøger at narre en person til at give følsomme oplysninger som adgangskoder, kreditkortoplysninger eller personlige oplysninger ved at udgive sig for at være en pålidelig kilde, såsom en bank, en virksomhed eller en kollega. Dette gøres ofte via e-mails, SMS'er eller falske websteder, der ligner legitime.
+                    <p class="space">Phishing er en form for cyberangreb, hvor hackeren forsøger at narre en person til at give følsomme oplysninger f.eks. adgangskoder, kreditkortoplysninger eller personlige oplysninger ved at udgive sig for at være en pålidelig kilde, såsom en bank, virksomhed eller kollega. 
                     </p>
+                    <p class="space">De typiske trin, som et phishing-angreb kan omfatte:</p>
+                    <p class="space fed">Forsendelse af falske beskeder: </p>
+                    <p>Hackeren sender en e-mail, SMS eller social media-besked, der ser ud til at komme fra en pålidelig kilde.</p>
+                    <p class="space fed">Opfordring til handling: </p>
+                    <p>Beskeden indeholder ofte et påskud, der opfordrer modtageren til at handle hurtigt. Dette kan omfatte f.eks. verificere af deres konto, ændre deres adgangskode, bekræfte en transaktion eller klikke på et link for at undgå en uønsket konsekvens.</p>
+                    <p class="space fed">Falske links eller vedhæftede filer: </p>
+                    <p>Beskeden indeholder ofte links til falske hjemmesider, hvor modtageren bliver bedt om at indtaste følsomme oplysninger. Alternativt kan der være vedhæftet filer, der indeholder malware eller skadelig software, som installerer sig på modtagerens enhed, når de åbnes.</p>
                     
                     <a href="info.html" class="btn">Lær mere</a>
                     <a href="senarie.html" class="btn gap">Test din viden</a>
