--- a/the-end.html
+++ b/the-end.html
@@ -15,7 +15,7 @@
         <section class="end-section">
                 <img src="img/safety-first.png" alt="" class="safety">
                 <h3>Safety first</h3>
-                <h3>Vær opmærksom i den digitale verden - viden er den sikre vej frem!</h3>
+                <h4>Phishing er en alvorlig trussel mod privatlivet og sikkerheden på nettet, og det er vigtigt at være opmærksom på tegnene på phishing, såsom uopfordrede eller mistænkelige beskeder, og være forsigtig med at dele personlige oplysninger online.</h4>
         </section> 
 
         <footer>
