--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
                 <h2>Hvordan beskytter man sig bedst?</h2>
             </div>
                     <div class="læring">
-                        <p>NNogle af de bedste måder at beskytte sig mod phishing inkluderer at være opmærksom på mistænkelige e-mails eller beskeder, undgå at klikke på usikre links eller downloade vedhæftede filer fra ukendte kilder, og bruge antivirussoftware og firewalls.</p>
+                        <p>Nogle af de bedste måder at beskytte sig mod phishing inkluderer at være opmærksom på mistænkelige e-mails eller beskeder, undgå at klikke på usikre links eller downloade vedhæftede filer fra ukendte kilder, og bruge antivirussoftware og firewalls.</p>
                         <p>Desuden kan man bekræfte anmodninger om følsomme oplysninger direkte hos den oplyste afsender via telefon eller en anden form for kommunikation.
                         </p>
                     </div>
