endnu et senarie tilføjet

--- a/senarie.html
+++ b/senarie.html
@@ -25,7 +25,11 @@
           </div>
         </section>
         
-        <footer>
+        <footer class="senarie-footer">
+          <div>
+            <img src="img/bank.png" id="bank">
+            <img src="img/pakke.png" id="dao">
+          </div>
             <nav>
               <ul>
                 <li><a href="index.html" id="link">.</a></li>
