rettelser responsivitet og senarie skift

--- a/info.html
+++ b/info.html
@@ -59,8 +59,9 @@
                     <p class="space">Derfor er det vigtigt at være forsigtig med at klikke på ukendte links og at holde din computer opdateret med de seneste sikkerhedsopdateringer.
                     </p>
                 </div>
-                
         </section>
+
+        <a href="senarie.html" class="btn gap">Test din viden</a>
 
         <footer>
             <nav>
