--- a/senarie.html
+++ b/senarie.html
@@ -14,7 +14,13 @@
 </head>
     <body>
         <section class="senarie">
-            <h1>Scenarie: Mistænkelig e-mail</h1>
+          <div class="line">
+            <div>
+              <img src="img/bank.png" id="bank">
+              <img src="img/pakke.png" id="dao">
+            </div>
+              <h1>Scenarie: Mistænkelig e-mail</h1>
+          </div>
           <div class="container">
             <div id="text">Text</div>
             <div id="option-buttons" class="btn-grid">
@@ -26,10 +32,6 @@
         </section>
         
         <footer class="senarie-footer">
-          <div>
-            <img src="img/bank.png" id="bank">
-            <img src="img/pakke.png" id="dao">
-          </div>
             <nav>
               <ul>
                 <li><a href="index.html" id="link">.</a></li>
