--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/script.js" defer></script>
     <script src="js/footer.js" defer></script>
 </head>
-    <body>
+    <body class="forside">
         <section class="hero-section">
             <div class="contain">
                 <span class="titel første-titel">Beware!</span>
